appstore-chart/templates/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app.kubernetes.io/managed-by: Helm
    app: backend
  annotations:
    meta.helm.sh/release-name: appstore-chart
    meta.helm.sh/release-namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mohanadnassar/backend:2024-07-02.2
          ports:
            - containerPort: 8000
