appstore-chart/templates/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app.kubernetes.io/managed-by: Helm   # Add this label
    app.kubernetes.io/name: mongodb     # Example label for app name
  annotations:
    meta.helm.sh/release-name: appstore-chart        # Add release name annotation
    meta.helm.sh/release-namespace: default         # Add release namespace annotation
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
