appstore-chart/templates/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: appstore-chart
    app.kubernetes.io/instance: appstore-chart
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    meta.helm.sh/release-name: appstore-chart
    meta.helm.sh/release-namespace: default
spec:
  rules:
  - host: dhbw-appstore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /apps
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
  tls: []
